# EATest

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
include/EATest/internal/: Config.h
source/: EATest.cpp
test/: CMakeLists.txt
